# dash_mais_empreendimentos

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  supabase_client.py
pages/: 1_Resumo.py  2_Leads.py  3_Agendamentos.py  4_Empreendimentos.py  5_Usuarios.py  ERD_mais_emp.py  fluxo_caixa.py  lancamentos.py  mais_emp_painel.py  menu.py  metricas.py  teste_supabase.py
utils/: supabase_client.py
