[tool.poetry]
name = "dash-mais-empreendimentos"
version = "0.1.0"
description = ""
authors = ["Thales Fernandes <contato.thales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.5"
streamlit = ">=1.48.1,<2.0.0"
supabase = "^2.18.1"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
